# Mistral4SmallClient

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mcp.json  mistral-small-4-reasoning.jinja  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: backends-and-runtime.md  configuration.md  local-mistral-small-4.md  project-tree.md  reference.md  user-guide.md
scripts/: cancel_probe.py  check_docs.py  generate_reference.py  install.sh
src/mistral4cli/: __init__.py  __main__.py  attachments.py  cli.py  cli_commands.py  cli_config.py  cli_repl.py  cli_shortcuts.py  cli_state.py  conversation_registry.py  local_mistral.py  local_tools.py  logging_config.py  mcp_bridge.py  mistral_client.py  session.py  session_context.py  session_conversations.py  session_primitives.py  session_runtime.py  session_tools.py  session_transport.py  terminal_picker.py  tooling.py  ui.py
src/mistralcli/: __init__.py  __main__.py  attachments.py  cli.py  cli_commands.py  cli_config.py  cli_repl.py  cli_shortcuts.py  cli_state.py  config.py  conversation_registry.py  local_mistral.py  local_tools.py  logging_config.py  mcp_bridge.py  session.py  session_context.py  session_conversations.py  session_primitives.py  session_runtime.py  session_tools.py  session_transport.py  terminal_picker.py  tooling.py  ui.py
tests/: cli_support.py  conftest.py  test_attachments.py  test_cli.py  test_cli_conversations_commands.py  test_cli_reasoning.py  test_cli_remote_transport.py  test_cli_runtime_attachments.py  test_cli_tty_status.py  test_cli_ui_tools.py  test_config.py  test_conversation_registry.py  test_local_mistral.py  test_local_tools.py  test_logging_config.py  test_mcp_bridge.py  test_remote_conversations.py  test_remote_mistral.py  test_tooling.py
tests/fixtures/internet/: README.md
