[project]
name = "mistral4cli"
version = "0.11.0"
description = "Retro CLI for validating and using Mistral Small 4 locally and remotely"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "David R. Lopez B.", email = "ibitato@gmail.com" }
]
requires-python = ">=3.10,<3.11"
keywords = [
    "mistral",
    "mistral-small-4",
    "mistralai",
    "llama.cpp",
    "cli",
    "mcp",
    "vision",
    "ocr",
    "testing",
]
dependencies = [
    "InquirerPy>=0.3.4,<0.4.0",
    "mcp>=1.23,<2.0",
    "mistralai>=2.3.2,<3.0",
    "pillow>=11.0,<12.0",
    "pypdf>=5.4,<6.0",
    "python-docx>=1.1,<2.0",
]

[project.scripts]
mistral4cli = "mistral4cli.cli:main"

[project.urls]
Homepage = "https://github.com/ibitato/Mistral4SmallClient"
Source = "https://github.com/ibitato/Mistral4SmallClient"
Issues = "https://github.com/ibitato/Mistral4SmallClient/issues"
Documentation = "https://github.com/ibitato/Mistral4SmallClient/blob/main/docs/local-mistral-small-4.md"

[dependency-groups]
dev = [
    "mypy>=1.15,<2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: tests that require the local llama.cpp server",
    "remote: tests that require the Mistral cloud API",
]
