[project]
name = "mistralcli"
version = "3.2.3"
description = "Retro multimodal CLI for Mistral models, with local llama.cpp and Mistral Cloud backends"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "David R. Lopez B.", email = "ibitato@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
    "mistral",
    "mistralai",
    "llama.cpp",
    "cli",
    "multimodal",
    "mcp",
    "tool-use",
    "vision",
    "documents",
    "ocr",
    "terminal",
    "local-inference",
]
dependencies = [
    "InquirerPy>=0.3.4,<0.4.0",
    "mcp>=1.23,<2.0",
    "mistralai>=2.4.3,<3.0",
    "pillow>=11.0,<12.0",
    "pypdf>=5.4,<6.0",
    "python-docx>=1.1,<2.0",
]

[project.scripts]
mistralcli = "mistralcli.cli:main"

[project.urls]
Homepage = "https://github.com/ibitato/MistralClient"
Source = "https://github.com/ibitato/MistralClient"
Issues = "https://github.com/ibitato/MistralClient/issues"
Documentation = "https://github.com/ibitato/MistralClient/blob/main/docs/backends-and-runtime.md"

[dependency-groups]
dev = [
    "mypy>=1.15,<2.0",
    "pyright[nodejs]>=1.1.409,<1.2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_incomplete_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "tests.test_local_mistral",
    "tests.test_remote_conversations",
    "tests.test_remote_mistral",
]
ignore_errors = true

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "tests/test_local_mistral.py",
    "tests/test_remote_conversations.py",
    "tests/test_remote_mistral.py",
]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: tests that require the local llama.cpp server",
    "remote: tests that require the Mistral cloud API",
]
